# speedwagon-contrib

./: .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE  README.rst  pyproject.toml  tox.ini
ci/jenkins/: README.md
speedwagon_contrib/: registered_workflows.py
speedwagon_contrib/file_checker/: file_checker.py  speedwagon_plugin.py  speedwagon_workflow.py
tests/: test_file_checker.py
