[project]
name = "speedwagon-contrib"
requires-python = '>= 3.10'
dependencies = [
    "speedwagon>=0.4.0b17"
]
version = '2026.7.0'
description  = 'User contributed workflows for Speedwagon'
authors = [
    {name = 'Anna Smith', email = 'annas15@illinois.edu'},
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
license = 'NCSA'

[project.optional-dependencies]
gui = ["speedwagon[qt]"]

[dependency-groups]
test = ['pytest']
dev = [
    {include-group = "test"},
]
[tool.setuptools]
packages = [
    'speedwagon-contrib',
    'speedwagon-contrib.file_checker',
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true

[tool.uv.sources]
speedwagon = {index = "uiuc_prescon_python"}