[project]
name = "speedwagon-contrib"
requires-python = '>= 3.10'
dependencies = [
    "speedwagon>=0.4.0b17"
]
version = '2026.7.0'
description  = 'User contributed workflows for Speedwagon'
authors = [
    {name = 'Anna Smith', email = 'annas15@illinois.edu'},
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
license = 'NCSA'

[project.optional-dependencies]
gui = ["speedwagon[qt]"]

[project.entry-points.'speedwagon.plugins']
file_checker_speedwagon = 'speedwagon_contrib.registered_workflows'

[dependency-groups]
test = ['pytest']
static-analysis = ['ruff']
type-checking = ["mypy"]
dev = [
    "coverage",
    "lxml",
    {include-group = "test"},
    {include-group = "static-analysis"},
    {include-group = "type-checking"},
]
[tool.setuptools]
packages = [
    'speedwagon_contrib',
    'speedwagon_contrib.file_checker',
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true

[tool.uv.sources]
speedwagon = {index = "uiuc_prescon_python"}

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "PLW", "PLC", "SIM"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"